@@ -24,5 +24,5 @@ dependencies {
 
 jar{
   baseName = 'ToolManCoinAirDropClient'
-  version = '1.0b1'
+  version = '1.0b2'
 }
