@@ -1,30 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<launch4jConfig>
-  <dontWrapJar>false</dontWrapJar>
-  <headerType>console</headerType>
-  <jar>S:\vcs\git\inmethod\Java\ToolManCoinAirDropClient\run\ToolManCoinAirDropClient-1.0b1.jar</jar>
-  <outfile>S:\vcs\git\inmethod\Java\ToolManCoinAirDropClient\run\AirDropClient.exe</outfile>
-  <errTitle></errTitle>
-  <cmdLine></cmdLine>
-  <chdir>.</chdir>
-  <priority>normal</priority>
-  <downloadUrl>http://java.com/download</downloadUrl>
-  <supportUrl></supportUrl>
-  <stayAlive>false</stayAlive>
-  <restartOnCrash>false</restartOnCrash>
-  <manifest></manifest>
-  <icon>S:\vcs\git\inmethod\Java\ToolManCoinAirDropClient\run\images\aqrc1-3o222-001.ico</icon>
-  <classPath>
-    <mainClass>tmc.client.AirDropClient</mainClass>
-    <cp>.</cp>
-  </classPath>
-  <jre>
-    <path>C:\Program Files\Java\jre1.8.0_261</path>
-    <bundledJre64Bit>true</bundledJre64Bit>
-    <bundledJreAsFallback>false</bundledJreAsFallback>
-    <minVersion>1.8.0</minVersion>
-    <maxVersion></maxVersion>
-    <jdkPreference>preferJre</jdkPreference>
-    <runtimeBits>64/32</runtimeBits>
-  </jre>
-</launch4jConfig>
